# Beat_box

./: README.md
assignment_3/: CMakeLists.txt
assignment_3/app/: CMakeLists.txt
assignment_3/app/src/: draw_stuff.c  joy.c  main.c
assignment_3/hal/include/hal/: accel.h  audioMixer.h  btn_statemachine.h  gpio.h  i2c_bus.h  joy_stick_control.h  js_connection.h  knob.h  periodTimer.h  rotar_statemachine.h  udp.h
assignment_3/hal/src/: accel.c  audioMixer.c  btn_statemachine.c  gpio.c  i2c_bus.c  joy_stick_control.c  js_connection.c  knob.c  rotar_statemachine.c  sampler.c
